--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "node": "^19.8.1",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "sass": "^1.62.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
