--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "node": "^19.8.1",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
